--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,166 +1,118 @@
-name: RDP + Tailscale + StarDesk (runneradmin)
+name: RDP + Tailscale (Ubuntu)
 
 on:
   workflow_dispatch:
-    inputs:
-      STAR_DESK_URL:
-        description: "Optional: direct URL to StarDesk_1.0.1.exe (paste if known)"
-        required: false
-        default: ""
 
 jobs:
   setup-remote:
-    runs-on: windows-latest
-    timeout-minutes: 360   # tahan sampai 6 jam; ubah sesuai kebutuhan
+    runs-on: ubuntu-latest
+    timeout-minutes: 360   # tahan sampai ~6 jam
 
     steps:
-      - name: Enable RDP & firewall
-        shell: pwsh
+      - name: Update apt & basic tools
+        shell: bash
         run: |
-          # Aktifkan RDP
-          Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server' -Name "fDenyTSConnections" -Value 0 -Force
-          # (opsional) nonaktifkan NLA untuk testing cepat
-          Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -Name "UserAuthentication" -Value 0 -Force
-          Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -Name "SecurityLayer" -Value 0 -Force
+          set -euxo pipefail
+          sudo apt-get update
+          sudo apt-get install -y curl wget gnupg lsof net-tools
 
-          # Firewall allow 3389
-          netsh advfirewall firewall delete rule name="RDP-Tailscale" | Out-Null
-          netsh advfirewall firewall add rule name="RDP-Tailscale" dir=in action=allow protocol=TCP localport=3389
-
-          # Restart RDP service
-          Restart-Service -Name TermService -Force
-
-      - name: Use runneradmin for RDP (change password & ensure RDP group)
-        shell: pwsh
+      - name: Create user 'runneradmin' (samain user/pw) & prep home
+        shell: bash
         run: |
-          $user = "runneradmin"
-          $pass = "Asukoe123456"   # <- testing; ganti kapan saja
-          Set-LocalUser -Name $user -Password (ConvertTo-SecureString $pass -AsPlainText -Force)
-          try { Add-LocalGroupMember -Group "Remote Desktop Users" -Member $user -ErrorAction Stop } catch {}
-          echo "RDP_USER=$user" >> $env:GITHUB_ENV
-          echo "RDP_PASS=$pass" >> $env:GITHUB_ENV
+          set -euxo pipefail
+          USERNAME="runneradmin"
+          PASSWORD="Asukoe123456"   # <- samain; disarankan pakai secret nantinya
+          if ! id -u "$USERNAME" >/dev/null 2>&1; then
+            sudo useradd -m -s /bin/bash "$USERNAME"
+          fi
+          echo "${USERNAME}:${PASSWORD}" | sudo chpasswd
+          sudo usermod -aG sudo "$USERNAME"
 
-      - name: Install Tailscale (robust)
-        shell: pwsh
+          # simpan env untuk ditampilkan nanti
+          echo "RDP_USER=$USERNAME" >> "$GITHUB_ENV"
+          echo "RDP_PASS=$PASSWORD" >> "$GITHUB_ENV"
+
+      - name: Install desktop (XFCE) + xrdp
+        shell: bash
         run: |
-          $tsUrl = "https://pkgs.tailscale.com/stable/tailscale-setup-1.82.0-amd64.msi"
-          $installerPath = "$env:TEMP\tailscale.msi"
-          Invoke-WebRequest -Uri $tsUrl -OutFile $installerPath
-          $p = Start-Process msiexec.exe -ArgumentList "/i", "`"$installerPath`"", "/qn", "/norestart" -Wait -PassThru
-          if ($p.ExitCode -ne 0) { Write-Error "Tailscale MSI install failed ($($p.ExitCode))"; exit 1 }
+          set -euxo pipefail
+          # XFCE jauh lebih ringan dibanding ubuntu-desktop
+          sudo apt-get update
+          sudo DEBIAN_FRONTEND=noninteractive apt-get install -y xfce4 xfce4-goodies xorg dbus-x11 x11-xserver-utils
+          sudo apt-get install -y xrdp
+          # xrdp butuh akses ke cert
+          sudo adduser xrdp ssl-cert || true
+          # Pakai XFCE untuk sesi RDP
+          for u in "$RDP_USER" "runner"; do
+            if id "$u" >/dev/null 2>&1; then
+              sudo -u "$u" bash -lc 'echo "startxfce4" > ~/.xsession'
+            fi
+          done
+          # Enable & start xrdp
+          sudo systemctl enable xrdp
+          sudo systemctl restart xrdp
 
-          # Temukan tailscale.exe
-          $candidates = @(
-            "$env:ProgramFiles\Tailscale LLC\Tailscale\tailscale.exe",
-            "$env:ProgramFiles\Tailscale\tailscale.exe",
-            "$env:ProgramFiles(x86)\Tailscale LLC\Tailscale\tailscale.exe",
-            "$env:ProgramFiles(x86)\Tailscale\tailscale.exe"
-          )
-          $tsExe = $null
-          for ($i=0; $i -lt 20 -and -not $tsExe; $i++) {
-            $tsExe = ($candidates | Where-Object { Test-Path $_ } | Select-Object -First 1)
-            if (-not $tsExe) {
-              try {
-                $f = Get-ChildItem -Path "$env:ProgramFiles*", "C:\ProgramData" -Recurse -Filter "tailscale.exe" -ErrorAction SilentlyContinue | Select-Object -First 1
-                if ($f) { $tsExe = $f.FullName }
-              } catch {}
-            }
-            if (-not $tsExe) { Start-Sleep -Seconds 2 }
-          }
-          if (-not $tsExe) { Write-Error "tailscale.exe not found"; exit 1 }
-          echo "TS_EXE=$tsExe" >> $env:GITHUB_ENV
-          Write-Host "tailscale.exe at: $tsExe"
+      - name: (Optional) Restrict RDP to Tailscale only (no UFW by default)
+        shell: bash
+        run: |
+          set -euxo pipefail
+          # GitHub ubuntu runners biasanya tidak mengaktifkan UFW, jadi port 3389 terbuka.
+          # Kalau mau lebih aman, aktifkan UFW & izinkan hanya dari subnet Tailscale (100.64.0.0/10).
+          # sudo apt-get install -y ufw
+          # sudo ufw allow from 100.64.0.0/10 to any port 3389 proto tcp
+          # sudo ufw --force enable
+          true
+
+      - name: Install Tailscale
+        shell: bash
+        run: |
+          set -euxo pipefail
+          curl -fsSL https://tailscale.com/install.sh | sh
+          tailscale --version || true
 
       - name: Connect Tailscale
-        shell: pwsh
+        shell: bash
+        env:
+          TS_AUTHKEY: ${{ secrets.TAILSCALE_AUTH_KEY }}
         run: |
-          $tsExe = $env:TS_EXE
-          & $tsExe up --authkey=${{ secrets.TAILSCALE_AUTH_KEY }} --hostname="gh-runner-$env:GITHUB_RUN_ID"
-          if ($LASTEXITCODE -ne 0) { Write-Error "tailscale up failed ($LASTEXITCODE)"; exit $LASTEXITCODE }
-
-          # Ambil IPv4 dengan retry
-          $tsIP = $null; $retries = 0
-          while (-not $tsIP -and $retries -lt 12) {
-            $tsIP = & $tsExe ip -4
-            if (-not $tsIP) { Start-Sleep -Seconds 5; $retries++ }
-          }
-          if (-not $tsIP) { Write-Error "No Tailscale IPv4"; exit 1 }
-          echo "TAILSCALE_IP=$tsIP" >> $env:GITHUB_ENV
-          Write-Host "Tailscale IP: $tsIP"
+          set -euxo pipefail
+          sudo tailscale up --authkey="${TS_AUTHKEY}" --hostname="gh-ubuntu-${GITHUB_RUN_ID}"
+          # Ambil IPv4 Tailscale
+          TS_IP="$(tailscale ip -4 | head -n1 || true)"
+          if [ -z "$TS_IP" ]; then
+            echo "Gagal mengambil IPv4 Tailscale"; exit 1
+          fi
+          echo "TAILSCALE_IP=$TS_IP" >> "$GITHUB_ENV"
+          echo "Tailscale IP: $TS_IP"
 
       - name: Verify RDP port via Tailscale
-        shell: pwsh
+        shell: bash
         run: |
-          $r = Test-NetConnection -ComputerName $env:TAILSCALE_IP -Port 3389
-          if (-not $r.TcpTestSucceeded) { Write-Error "RDP 3389 not reachable"; exit 1 }
-          Write-Host "RDP 3389 reachable."
-
-      - name: Install StarDesk 1.0.1
-        shell: pwsh
-        run: |
-          $tmp = "$env:TEMP\stardesk"; New-Item -ItemType Directory -Path $tmp -Force | Out-Null
-          $out = Join-Path $tmp "StarDesk_1.0.1.exe"
-
-          # 1) Pakai input kalau disediakan
-          $urlInput = "${{ github.event.inputs.STAR_DESK_URL }}"
-          $urls = @()
-          if ($urlInput -and $urlInput.Trim().Length -gt 0) { $urls += $urlInput.Trim() }
-
-          # 2) Kandidat URL umum ke file StarDesk_1.0.1.exe
-          $filename = "StarDesk_1.0.1.exe"
-          $urls += @(
-            "https://www.stardesk.net/$filename",
-            "https://www.stardesk.net/res/download/$filename",
-            "https://stardesk.net/$filename",
-            "https://download.stardesk.net/$filename",
-            "https://cdn.stardesk.net/$filename"
-          )
-
-          $success = $false
-          foreach ($u in $urls) {
-            try {
-              Write-Host "Trying $u"
-              Invoke-WebRequest -Uri $u -OutFile $out -UseBasicParsing -TimeoutSec 180 -MaximumRedirection 5
-              if ((Test-Path $out) -and ((Get-Item $out).Length -gt 2MB)) { $success = $true; break }
-            } catch {
-              Write-Host "Failed: $u"
-            }
-          }
-          if (-not $success) {
-            Write-Error "Gagal download StarDesk_1.0.1.exe. Jalankan lagi dan isi input STAR_DESK_URL (link langsung dari tombol 'StarDesk for Windows')."
-            exit 1
-          }
-
-          # Coba silent switches umum; jika gagal, jalankan normal
-          $args = @("/S", "/silent", "/verysilent")
-          $installed = $false
-          foreach ($a in $args) {
-            try {
-              $p = Start-Process -FilePath $out -ArgumentList $a -Wait -PassThru -WindowStyle Hidden
-              if ($p.ExitCode -eq 0) { $installed = $true; break }
-            } catch {}
-          }
-          if (-not $installed) {
-            Write-Host "Silent unknown; running without switches..."
-            Start-Process -FilePath $out -Wait
-          }
-          Write-Host "StarDesk installer executed."
+          set -euxo pipefail
+          TS_IP="$TAILSCALE_IP"
+          echo "Testing TCP 3389 on $TS_IP ..."
+          # Coba connect ke port 3389 (xrdp) via bash /dev/tcp
+          timeout 5 bash -lc "exec 3<>/dev/tcp/${TS_IP}/3389" && echo "RDP 3389 reachable." || (echo "RDP 3389 not reachable" && exit 1)
 
       - name: Show connection info & keep alive
-        shell: pwsh
+        shell: bash
         timeout-minutes: 360
         run: |
-          Write-Host "`n=== RDP ACCESS ==="
-          Write-Host "Address : $env:TAILSCALE_IP"
-          Write-Host "Username: $env:RDP_USER"
-          Write-Host "Password: $env:RDP_PASS"
-          Write-Host "==================`n"
+          set -euxo pipefail
+          echo
+          echo "=== RDP ACCESS (Ubuntu) ==="
+          echo "Address : ${TAILSCALE_IP}"
+          echo "Username: ${RDP_USER}"
+          echo "Password: ${RDP_PASS}"
+          echo "==========================="
+          echo
 
-          # Pastikan port 3389 listen
-          try { Get-NetTCPConnection -LocalPort 3389 -State Listen | Out-Host } catch {}
+          echo "Listening sockets (grep 3389):"
+          sudo ss -tulpn | (grep 3389 || true) || true
+          echo
 
-          # Keep runner hidup
-          while ($true) {
-            Write-Host "[$(Get-Date)] RDP Active - Cancel workflow to terminate"
-            Start-Sleep -Seconds 300
-          }
+          # Keep runner hidup (CTRL+C / cancel job untuk stop)
+          while true; do
+            echo "[$(date)] RDP Active - cancel workflow to terminate"
+            sleep 300
+          done
